@@ -18,18 +18,18 @@
  */
 package org.apache.syncope.client.enduser.pages;
 
-import java.util.Collections;
 import java.util.Iterator;
-import java.util.stream.Collectors;
+import java.util.List;
+import java.util.function.Predicate;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.syncope.client.enduser.SyncopeEnduserSession;
-import org.apache.syncope.client.enduser.markup.html.form.BpmnProcessesAjaxPanel;
 import org.apache.syncope.client.enduser.panels.UserRequestDetails;
 import org.apache.syncope.client.enduser.rest.BpmnProcessRestClient;
 import org.apache.syncope.client.enduser.rest.UserRequestRestClient;
 import org.apache.syncope.client.ui.commons.Constants;
 import org.apache.syncope.client.ui.commons.ajax.form.IndicatorAjaxFormComponentUpdatingBehavior;
 import org.apache.syncope.client.ui.commons.annotations.ExtPage;
+import org.apache.syncope.client.ui.commons.markup.html.form.AjaxTextFieldPanel;
 import org.apache.syncope.client.ui.commons.wicket.markup.html.bootstrap.tabs.Accordion;
 import org.apache.syncope.common.lib.to.BpmnProcess;
 import org.apache.syncope.common.lib.to.UserRequest;
@@ -63,45 +63,13 @@ public class Flowable extends BaseExtPage {
     @SpringBean
     protected BpmnProcessRestClient bpmnProcessRestClient;
 
-    protected final Model<String> bpmnProcessModel = new Model<>();
-
-    protected final WebMarkupContainer container;
-
-    protected final DataView<UserRequest> urDataView;
-
     public Flowable(final PageParameters parameters) {
         super(parameters, USER_REQUESTS);
 
-        container = new WebMarkupContainer("content");
-        container.setOutputMarkupId(true);
+        WebMarkupContainer container = new WebMarkupContainer("content");
+        contentWrapper.add(container.setOutputMarkupId(true));
 
-        // list of accordions containing request form (if any) and delete button
-        urDataView = new DataView<>("userRequests", new URDataProvider(ROWS_PER_PAGE, "bpmnProcess")) {
-
-            private static final long serialVersionUID = -5002600396458362774L;
-
-            @Override
-            protected void populateItem(final Item<UserRequest> item) {
-                final UserRequest userRequest = item.getModelObject();
-                item.add(new Accordion("userRequestDetails", Collections.singletonList(new AbstractTab(
-                        new StringResourceModel("user.requests.accordion", container, Model.of(userRequest))) {
-
-                    private static final long serialVersionUID = 1037272333056449378L;
-
-                    @Override
-                    public WebMarkupContainer getPanel(final String panelId) {
-                        // find the form associated to the current request, if any
-                        return new UserRequestDetails(panelId, userRequest, container, notificationPanel);
-                    }
-                }), Model.of(-1)).setOutputMarkupId(true));
-            }
-        };
-
-        urDataView.setItemsPerPage(ROWS_PER_PAGE);
-        urDataView.setOutputMarkupId(true);
-        container.add(urDataView);
-        container.add(new AjaxPagingNavigator("navigator", urDataView));
-
+        Model<String> bpmnProcessModel = new Model<>();
         AjaxLink<Void> startButton = new AjaxLink<>("start") {
 
             private static final long serialVersionUID = 3669569969172391336L;
@@ -110,7 +78,7 @@ public class Flowable extends BaseExtPage {
             public void onClick(final AjaxRequestTarget target) {
                 if (StringUtils.isNotBlank(bpmnProcessModel.getObject())) {
                     try {
-                        userRequestRestClient.startRequest(bpmnProcessModel.getObject(), null);
+                        userRequestRestClient.startRequest(bpmnProcessModel.getObject());
                     } catch (Exception e) {
                         LOG.error("Unable to start bpmnProcess [{}]", bpmnProcessModel.getObject(), e);
                         SyncopeEnduserSession.get()
@@ -121,32 +89,50 @@ public class Flowable extends BaseExtPage {
                 }
             }
         };
-
-        startButton.setEnabled(false);
-        container.add(startButton);
+        container.add(startButton.setEnabled(false));
 
         // autocomplete select with bpmnProcesses
-        BpmnProcessesAjaxPanel bpmnProcesses = new BpmnProcessesAjaxPanel("bpmnProcesses", "bpmnProcesses",
-                bpmnProcessModel, new IndicatorAjaxFormComponentUpdatingBehavior(Constants.ON_CHANGE) {
+        AjaxTextFieldPanel bpmnProcesses = new AjaxTextFieldPanel(
+                "bpmnProcesses", "bpmnProcesses", bpmnProcessModel, false);
+        bpmnProcesses.getField().add(new IndicatorAjaxFormComponentUpdatingBehavior(Constants.ON_CHANGE) {
 
             private static final long serialVersionUID = -1107858522700306810L;
 
             @Override
             protected void onUpdate(final AjaxRequestTarget target) {
-                if (StringUtils.isNotBlank(bpmnProcessModel.getObject())) {
-                    startButton.setEnabled(true);
-                } else {
-                    startButton.setEnabled(false);
-                }
+                startButton.setEnabled(StringUtils.isNotBlank(bpmnProcessModel.getObject()));
                 target.add(container);
             }
         });
-        bpmnProcesses.setChoices(bpmnProcessRestClient.getDefinitions().stream()
-                .filter(definition -> !definition.isUserWorkflow())
-                .map(BpmnProcess::getKey).collect(Collectors.toList()));
+        bpmnProcesses.setChoices(bpmnProcessRestClient.getDefinitions().stream().
+                filter(Predicate.not(BpmnProcess::isUserWorkflow)).
+                map(BpmnProcess::getKey).sorted().toList());
         container.add(bpmnProcesses);
 
-        contentWrapper.add(container);
+        // list of accordions containing request form (if any) and delete button
+        DataView<UserRequest> urDataView = new DataView<>(
+                "userRequests", new URDataProvider(ROWS_PER_PAGE, "bpmnProcess")) {
+
+            private static final long serialVersionUID = -5002600396458362774L;
+
+            @Override
+            protected void populateItem(final Item<UserRequest> item) {
+                UserRequest userRequest = item.getModelObject();
+                item.add(new Accordion("userRequestDetails", List.of(new AbstractTab(
+                        new StringResourceModel("user.requests.accordion", container, Model.of(userRequest))) {
+
+                    private static final long serialVersionUID = 1037272333056449378L;
+
+                    @Override
+                    public WebMarkupContainer getPanel(final String panelId) {
+                        return new UserRequestDetails(panelId, userRequest, container, notificationPanel);
+                    }
+                }), Model.of(-1)).setOutputMarkupId(true));
+            }
+        };
+        urDataView.setItemsPerPage(ROWS_PER_PAGE);
+        container.add(urDataView.setOutputMarkupId(true));
+        container.add(new AjaxPagingNavigator("navigator", urDataView));
     }
 
     protected class URDataProvider implements IDataProvider<UserRequest> {
@@ -165,9 +151,9 @@ public class Flowable extends BaseExtPage {
         @Override
         public Iterator<UserRequest> iterator(final long first, final long count) {
             int page = ((int) first / paginatorRows);
-            return userRequestRestClient.listRequests((page < 0 ? 0 : page) + 1,
+            return userRequestRestClient.listRequests(
+                    (page < 0 ? 0 : page) + 1,
                     paginatorRows,
-                    SyncopeEnduserSession.get().getSelfTO().getUsername(),
                     new SortParam<>(sortParam, true)).iterator();
         }
 
